.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Deployment_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Org__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Org</label>
        <referenceTo>Flosum__Organisation__c</referenceTo>
        <relationshipLabel>Deployment Approvals</relationshipLabel>
        <relationshipName>Deployment_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Patch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipLabel>Deployment Approvals</relationshipLabel>
        <relationshipName>Deployment_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Process_Type__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment</fullName>
                </value>
                <value>
                    <fullName>Validate</fullName>
                </value>
                <value>
                    <fullName>Rollback (Validate)</fullName>
                </value>
                <value>
                    <fullName>Rollback (Deployment)</fullName>
                </value>
                <value>
                    <fullName>Schedule Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Run_Test_Param__c</fullName>
        <label>Run Test Param</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Specified_Tests__c</fullName>
        <label>Specified Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deployment_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deployment Approval</label>
    <nameField>
        <displayFormat>DA-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Deployment Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>